unpackaged/main/default/objects/FSL__Service_Goal__c/fields/FSL__Custom_Type__c.field-meta.xml
<CustomField>
    <fullName>FSL__Custom_Type__c</fullName>
    <label>Custom Objective Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Objective_Minimize_Engineer_Idle_Time</fullName>
                <label>Minimize Engineer Idle Time</label>
            </value>
            <value>
                <fullName>Objective_Minimize_Use_Of_Elasticity</fullName>
                <label>Minimize Use Of Elasticity</label>
            </value>
            <value>
                <fullName>Objectiveֿ_Priority_By_Distance_To_Engineer</fullName>
                <label>Priority By Distance To Engineer</label>
            </value>
            <value>
                <fullName>Objective_Travel_From_Home_Base</fullName>
                <label>Travel From Home Base</label>
            </value>
            <value>
                <fullName>Objective_Skill_Level</fullName>
                <label>Skill Level</label>
            </value>
            <value>
                <fullName>Objective_Asap</fullName>
                <label>ASAP</label>
            </value>
            <value>
                <fullName>Objective_Minimize_Travel</fullName>
                <label>Minimize Travel</label>
            </value>
            <value>
                <fullName>Objective_Minimize_Overtime</fullName>
                <label>Minimize Overtime</label>
            </value>
            <value>
                <fullName>Objective_Resource_Priority</fullName>
                <label>Resource Priority</label>
            </value>
            <value>
                <fullName>Objective_PreferredEngineer</fullName>
                <label>Preferred Resource</label>
            </value>
            <value>
                <fullName>Objective_Task_Priority</fullName>
                <label>Task Priority</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>