unpackaged/main/default/objects/FSL__Service_Goal__c/fields/FSL__Gap_Duration__c.field-meta.xml
<CustomField>
    <fullName>FSL__Gap_Duration__c</fullName>
    <inlineHelpText>Enter the number of minutes that represent an idle time gap between service appointments. This objective minimizes gaps that are equal to or higher than the entered value.</inlineHelpText>
    <label>Minimum Gap Duration (in minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>