unpackaged/main/default/objects/FSL__Service_Goal__c/fields/FSL__Prioritize_Resource__c.field-meta.xml
<CustomField>
    <fullName>FSL__Prioritize_Resource__c</fullName>
    <label>Prioritize Resource</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Least Qualified</fullName>
                <default>true</default>
                <label>Least Qualified</label>
            </value>
            <value>
                <fullName>Most Qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>