unpackaged/main/default/objects/FSL__Service_Goal__c/fields/FSL__Resource_Group_Field__c.field-meta.xml
<CustomField>
    <fullName>FSL__Resource_Group_Field__c</fullName>
    <label>Resource_Group_Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>