unpackaged/main/default/objects/FSL__Service_Goal__c/recordTypes/FSL__Objective_Asap.recordType-meta.xml
<RecordType>
    <fullName>FSL__Objective_Asap</fullName>
    <active>true</active>
    <description>Schedule as soon as possible</description>
    <label>ASAP</label>
</RecordType>