unpackaged/main/default/objects/FSL__Service_Goal__c/recordTypes/FSL__Objective_Custom_Logic.recordType-meta.xml
<RecordType>
    <fullName>FSL__Objective_Custom_Logic</fullName>
    <active>true</active>
    <description>Custom Objective</description>
    <label>Custom Objective</label>
</RecordType>