unpackaged/main/default/objects/FSL__Service_Goal__c/recordTypes/FSL__Objective_Minimize_Gaps.recordType-meta.xml
<RecordType>
    <fullName>FSL__Objective_Minimize_Gaps</fullName>
    <active>true</active>
    <description>Reduce idle time gaps between service appointments</description>
    <label>Minimize Gaps</label>
</RecordType>