unpackaged/main/default/objects/FSL__Service_Goal__c/recordTypes/FSL__Objective_Minimize_Overtime.recordType-meta.xml
<RecordType>
    <fullName>FSL__Objective_Minimize_Overtime</fullName>
    <active>true</active>
    <description>Minimize the use of overtime</description>
    <label>Minimize Overtime</label>
</RecordType>