unpackaged/main/default/objects/FSL__Service_Goal__c/recordTypes/FSL__Objective_Minimize_Travel.recordType-meta.xml
<RecordType>
    <fullName>FSL__Objective_Minimize_Travel</fullName>
    <active>true</active>
    <description>Minimize travel time</description>
    <label>Minimize Travel</label>
</RecordType>