unpackaged/main/default/objects/FSL__Service_Goal__c/recordTypes/FSL__Objective_PreferredEngineer.recordType-meta.xml
<RecordType>
    <fullName>FSL__Objective_PreferredEngineer</fullName>
    <active>true</active>
    <description>Prioritize scheduling according to preferred resource</description>
    <label>Preferred Resource</label>
</RecordType>