unpackaged/main/default/objects/FSL__Service_Goal__c/recordTypes/FSL__Objective_Resource_Priority.recordType-meta.xml
<RecordType>
    <fullName>FSL__Objective_Resource_Priority</fullName>
    <active>true</active>
    <description>Prefer a resource based on a field value on the resource</description>
    <label>Resource Priority</label>
</RecordType>