unpackaged/main/default/objects/FSL__Service_Goal__c/recordTypes/FSL__Objective_Skill_Level.recordType-meta.xml
<RecordType>
    <fullName>FSL__Objective_Skill_Level</fullName>
    <active>true</active>
    <description>Prefer the least/most qualified candidate</description>
    <label>Skill Level</label>
</RecordType>