unpackaged/main/default/objects/FSL__Service_Goal__c/recordTypes/FSL__Objective_Skill_Preferences.recordType-meta.xml
<RecordType>
    <fullName>FSL__Objective_Skill_Preferences</fullName>
    <active>true</active>
    <description>Skill Preferences with skill type</description>
    <label>Skill Preferences</label>
</RecordType>